--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -9,10 +9,10 @@
 //$indented-lists: true;
 
 // Padding used for layout margins
-//$pad-min: 18px;
-//$pad-narrow: 25px;
-//$pad-medium: 35px;
-//$pad-wide: 55px;
+$pad-min: 15px;
+$pad-narrow: 20px;
+$pad-medium: 25px;
+$pad-wide: 30px;
 
 // Sidebar widths used in media queries
 //$sidebar-width-medium: 240px;
