--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,12 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+// markdown文章里自动插入目录的style
+#markdown-toc:before {
+  content: "本页目录";
+  font-weight: bold;
+}
+// 让首页不出现文章目录
+.blog-index #markdown-toc {
+  display: none;
+}
